--- a/VulkanTests/VulkanTests.vcxproj
+++ b/VulkanTests/VulkanTests.vcxproj
@@ -160,10 +160,12 @@
     <ClInclude Include="glm\glm.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="VulkanTest.h" />
     <ClInclude Include="vulkan\vk_cpp.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="VulkanTest.cpp" />
     <ClCompile Include="VulkanTests.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
